version/0.16/_sources/api/ansys/dpf/core/operators/averaging/elemental_to_nodal/InputsElementalToNodal.rst.txt






:class:`InputsElementalToNodal`
===============================


.. py:class:: ansys.dpf.core.operators.averaging.elemental_to_nodal.InputsElementalToNodal(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   elemental_to_nodal operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.averaging.elemental_to_nodal()
   >>> my_field = dpf.Field()
   >>> op.inputs.field.connect(my_field)
   >>> my_mesh_scoping = dpf.Scoping()
   >>> op.inputs.mesh_scoping.connect(my_mesh_scoping)
   >>> my_force_averaging = int()
   >>> op.inputs.force_averaging.connect(my_force_averaging)
   >>> my_algorithm = int()
   >>> op.inputs.algorithm.connect(my_algorithm)






.. py:currentmodule:: InputsElementalToNodal

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~field`
            - Allows to connect field input to the operator.
          * - :py:attr:`~mesh_scoping`
            - Allows to connect mesh_scoping input to the operator.
          * - :py:attr:`~force_averaging`
            - Allows to connect force_averaging input to the operator.
          * - :py:attr:`~algorithm`
            - Allows to connect algorithm input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.averaging.elemental_to_nodal import InputsElementalToNodal

Property detail
---------------

.. py:property:: field
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.field.Field | ansys.dpf.core.fields_container.FieldsContainer]


   Allows to connect field input to the operator.

   field or fields container with only one field is expected

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.averaging.elemental_to_nodal()
   >>> op.inputs.field.connect(my_field)
   >>> # or
   >>> op.inputs.field(my_field)

.. py:property:: mesh_scoping
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.scoping.Scoping]


   Allows to connect mesh_scoping input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.averaging.elemental_to_nodal()
   >>> op.inputs.mesh_scoping.connect(my_mesh_scoping)
   >>> # or
   >>> op.inputs.mesh_scoping(my_mesh_scoping)

.. py:property:: force_averaging
   :type: ansys.dpf.core.inputs.Input[int]


   Allows to connect force_averaging input to the operator.

   Averaging on nodes is used if this pin is set to 1 (default is 1 for integrated results and 0 for discrete ones).

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.averaging.elemental_to_nodal()
   >>> op.inputs.force_averaging.connect(my_force_averaging)
   >>> # or
   >>> op.inputs.force_averaging(my_force_averaging)

.. py:property:: algorithm
   :type: ansys.dpf.core.inputs.Input[int]


   Allows to connect algorithm input to the operator.

   Forces the usage of algorithm 1, 2 or 3 (default is chosen based on the type of mesh).

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.averaging.elemental_to_nodal()
   >>> op.inputs.algorithm.connect(my_algorithm)
   >>> # or
   >>> op.inputs.algorithm(my_algorithm)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




